--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Effective JavaScript: Frogger</title>
+    <title>Effective JavaScript: MyFrogger</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="row">
+	<label>Score:</label>
+    <input type="text" id="score" readonly>
+    <label>Level:</label>
+    <input type="text" id="level" value="1" readonly>
+</div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
